Add building info, settings page

--- a/src/app/home/feed/feed.page.html
+++ b/src/app/home/feed/feed.page.html
@@ -37,7 +37,7 @@
           <ion-card
             *ngFor="let building of buildingStatuses"
             mode="md"
-            (click)="statusClick(building.id)"
+            (click)="statusClick(building)"
           >
             <ion-card-header>
               <div class="card-header-container">
