--- a/src/app/home/settings/about/about.page.html
+++ b/src/app/home/settings/about/about.page.html
@@ -1,19 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Settings</ion-title>
+    <ion-title>About</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item button detail="false" (click)="goto('security')">
-      <ion-label>Security</ion-label>
+    <ion-item>
+      <ion-label>
+        <h2>App version:</h2>
+        <p>{{versionNumber}}</p>
+      </ion-label>
     </ion-item>
-    <ion-item button detail="false" (click)="goto('about')">
-      <ion-label>About</ion-label>
-    </ion-item>
-    <ion-item button detail="false" (click)="handleLogout()">
-      <ion-label>Log out</ion-label>
+    <ion-item>
+      <ion-label>
+        <h2>Package name:</h2>
+        <p>{{packageName}}</p>
+      </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
