--- a/src/app/home/settings/security/security.page.html
+++ b/src/app/home/settings/security/security.page.html
@@ -1,19 +1,18 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Settings</ion-title>
+    <ion-title>Security</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item button detail="false" (click)="goto('security')">
-      <ion-label>Security</ion-label>
-    </ion-item>
-    <ion-item button detail="false" (click)="goto('about')">
-      <ion-label>About</ion-label>
-    </ion-item>
-    <ion-item button detail="false" (click)="handleLogout()">
-      <ion-label>Log out</ion-label>
+    <ion-item>
+      <ion-label>Session Auto-Resume</ion-label>
+      <ion-toggle
+        slot="end"
+        [(ngModel)]="isRememberLogin"
+        (ionChange)="toggleRememberLogin($event)"
+      ></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
