Prep for attachements

--- a/src/app/home/create/attachments/attachments.page.html
+++ b/src/app/home/create/attachments/attachments.page.html
@@ -6,7 +6,12 @@
   <div class="top-bottom">
     <div class="section-container">
       <div class="section-title">Attachments</div>
-      
+      <div class="attachment-control">
+        <div class="attachment-list">
+          <div class="attachment-item"></div>
+        </div>
+        <ion-button>Upload Attachment</ion-button>
+      </div>
     </div>
     <div class="page-hint">Page 5 of 5</div>
     <div class="button-group">
