--- a/src/app/home/create/inspection/inspection.page.html
+++ b/src/app/home/create/inspection/inspection.page.html
@@ -1,4 +1,11 @@
 <ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start" id="go-back">
+      <ion-button (click)="goBack()">
+        <ion-icon slot="icon-only" name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
   <div class="notice-message">You are creating a new report.</div>
 </ion-header>
 <ion-content>
@@ -54,7 +61,7 @@
   </div>
 </ion-content>
 
-<ion-footer>
+<!-- <ion-footer>
   <ion-toolbar>
     <ion-buttons slot="start" id="go-back">
       <ion-button (click)="goBack()">
@@ -62,4 +69,4 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
